--- a/newsitem.html
+++ b/newsitem.html
@@ -12,13 +12,11 @@
     <title>Document</title>
   </head>
   <body>
-    <header class="header news">
+    <header class="article_header">
       <nav>
         <label class="logo"
           ><a href="index.html"
-            ><img
-              src="/images/EnterpriseNGRLogo.png"
-              alt="EnterpriseNGR_Logo" /></a
+            ><img src="/images/logo1.png" alt="EnterpriseNGR_Logo" /></a
         ></label>
         <ul id="menu">
           <li><a href="about.html">About Us</a></li>
@@ -34,56 +32,113 @@
         </label>
       </nav>
     </header>
-    <section class="news_article">
-      <div class="md_heading">2022 State of Enterprise</div>
-      <div class="thin">Caption</div>
-      <div class="article_img"><img src="/images/finewoman.png" alt="" /></div>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste architecto
-        maxime natus itaque unde dolorum beatae, sunt aliquid voluptatibus rerum
-        est quibusdam consequatur quod laboriosam? Et suscipit eos dicta
-        repellat beatae accusamus laudantium nostrum similique reiciendis culpa.
-        Ea ad eius quibusdam provident nemo! In officiis provident ex deserunt
-        dolorem voluptatum maiores incidunt earum eligendi quo similique
-        necessitatibus quos, alias consequatur beatae libero modi quidem
-        suscipit itaque ipsam asperiores qui neque tenetur. Alias unde, laborum
-        iste quae ex illum perferendis voluptatum inventore incidunt? Alias
-        cupiditate iusto omnis, aliquid odit nihil laudantium neque suscipit
-        fugit molestiae est cum? Tempore sint accusamus pariatur.
-      </p>
-      <br />
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste architecto
-        maxime natus itaque unde dolorum beatae, sunt aliquid voluptatibus rerum
-        est quibusdam consequatur quod laboriosam? Et suscipit eos dicta
-        repellat beatae accusamus laudantium nostrum similique reiciendis culpa.
-        Ea ad eius quibusdam provident nemo! In officiis provident ex deserunt
-        dolorem voluptatum maiores incidunt earum eligendi quo similique
-        necessitatibus quos, alias consequatur beatae libero modi quidem
-        suscipit itaque ipsam asperiores qui neque tenetur. Alias unde, laborum
-        iste quae ex illum perferendis voluptatum inventore incidunt? Alias
-        cupiditate iusto omnis, aliquid odit nihil laudantium neque suscipit
-        fugit molestiae est cum? Tempore sint accusamus pariatur.
-      </p>
-      <br />
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste architecto
-        maxime natus itaque unde dolorum beatae, sunt aliquid voluptatibus rerum
-        est quibusdam consequatur quod laboriosam? Et suscipit eos dicta
-        repellat beatae accusamus laudantium nostrum similique reiciendis culpa.
-        Ea ad eius quibusdam provident nemo! In officiis provident ex deserunt
-        dolorem voluptatum maiores incidunt earum eligendi quo similique
-        necessitatibus quos, alias consequatur beatae libero modi quidem
-        suscipit itaque ipsam asperiores qui neque tenetur. Alias unde, laborum
-        iste quae ex illum perferendis voluptatum inventore incidunt? Alias
-        cupiditate iusto omnis, aliquid odit nihil laudantium neque suscipit
-        fugit molestiae est cum? Tempore sint accusamus pariatur.
-      </p>
-    </section>
 
-    <section class="latest_news">
+    <div class="category">
+      <div class="child green">Policy & Research ></div>
+      <div class="child grey">New Report: 2022 State of Enterprise</div>
+    </div>
+
+    <article class="article">
+      <div class="article_body">
+        <div class="image">
+          <img src="/images/yoe1.png" alt="" />
+        </div>
+        <div class="article_detail">
+          <div class="child green">Policy,Insight |</div>
+          <div class="child">April 12, 2022 |</div>
+          <div class="child">Peter Allan |</div>
+          <div class="child">Comments: 0</div>
+        </div>
+        <div class="md_heading">New Report: 2022 State of Enterprise</div>
+        <div class="article_text">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non
+            sapien accumsan, commodo turpis a, accumsan sem. Duis sit amet
+            lectus et nisl rutrum auctor at a ligula. Sed pharetra dui mauris,
+            id euismod ipsum gravida sit amet. Nulla mattis eu nisi congue
+            facilisis. Quisque sed ipsum vel odio bibendum bibendum blandit eu
+            sem. Mauris eget leo eleifend, maximus lorem sed, suscipit nisi.
+            Vestibulum tempor faucibus massa eget fringilla. Suspendisse
+            convallis euismod quam. Donec tincidunt interdum ante, in iaculis
+            lacus posuere et. Donec nec enim molestie, tincidunt ante quis,
+            vulputate massa. Phasellus sed nisi diam. Sed scelerisque iaculis
+            leo ac pharetra.
+          </p>
+          <br />
+          <p>
+            Curabitur ut cursus elit. Aliquam pulvinar, odio sed molestie
+            auctor, urna est gravida libero, vel ullamcorper ex libero vel
+            mauris. Integer semper magna enim. Suspendisse ipsum urna, imperdiet
+            vitae dignissim sit amet, lobortis quis orci. Vestibulum quis tempor
+            justo. Phasellus auctor leo at neque ullamcorper, at aliquet ipsum
+            egestas. Etiam accumsan leo et eros consequat tempor.
+          </p>
+          <br />
+          <p>
+            Donec sit amet sem vitae ipsum rutrum volutpat. Orci varius natoque
+            penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+            Nam blandit ante nec tempor tincidunt. Nunc sit amet mauris
+            imperdiet, dapibus nisl vel, varius eros. Integer ut enim quis arcu
+            volutpat dictum bibendum eget ligula. Suspendisse ut scelerisque
+            lectus. Integer in ullamcorper risus.
+          </p>
+          <br />
+          <p>
+            In ac cursus lorem, vitae laoreet dolor. Pellentesque eget interdum
+            ipsum. Pellentesque ut turpis ac felis egestas blandit eu nec ipsum.
+            Vivamus quis rutrum arcu. Etiam pretium augue a est sodales
+            scelerisque. In ut risus ultricies, tempus est ut, blandit nisl.
+            Mauris dignissim sapien ut turpis tristique consectetur. Vestibulum
+            dui mauris, aliquam ac libero quis, fermentum dignissim libero.
+            Maecenas lacus ante, sollicitudin vel ipsum varius, pulvinar
+            dignissim urna. Nam et porta magna. Phasellus at nisl nisl. Nunc
+            fermentum quis dui id condimentum. Praesent congue, ante sed rutrum
+            dictum, metus ex sagittis leo, nec efficitur purus augue sit amet
+            nunc. Sed convallis mattis mattis. Sed vitae odio non eros mollis
+            condimentum. Duis maximus urna nisi, in tristique turpis congue at.
+          </p>
+          <br />
+          <p>
+            Nam laoreet turpis sed accumsan maximus. Nunc non porttitor purus.
+            In aliquet consectetur dui, eu tincidunt nulla. Ut ac ullamcorper
+            ex. Nullam vitae molestie ligula. Nam dapibus, enim ac tincidunt
+            ornare, tortor libero sagittis ex, vel molestie nisl felis non erat.
+            Suspendisse blandit vestibulum turpis, sit amet auctor velit congue
+            ac. Maecenas ornare neque et imperdiet vehicula.
+          </p>
+        </div>
+
+        <div class="share_article">
+          <div class="text">Share this article</div>
+          <div class="social_icons">
+            <div class="item">
+              <a href=""><img src="/images/Vector.png" alt="" /></a>
+            </div>
+            <div class="item">
+              <a href=""><img src="/images/ig.png" alt="" /></a>
+            </div>
+            <div class="item">
+              <a href=""><img src="/images/twitter.png" alt="" /></a>
+            </div>
+          </div>
+        </div>
+        <div class="tag">
+          <span class="bold">Tags</span>
+          <span class="thin">Policy</span>
+          <span class="thin">Insight</span>
+          <span class="thin">Enterprise</span>
+        </div>
+      </div>
+      <div class="search"></div>
+    </article>
+
+    <section class="latest_news newscard">
       <div class="news">
-        <div class="md_heading">Related News</div>
+        <div class="sm_heading">KEEP UP TO DATE</div>
+        <div class="md_heading">Latest News</div>
+        <div class="thin">
+          The latest news from EnterpriseNGR and the financial services sector.
+        </div>
         <div class="cards">
           <div class="card">
             <div class="image">
@@ -165,47 +220,6 @@
               >
             </div>
           </div>
-        </div>
-      </div>
-
-      <div class="enterprise_voice">
-        <div class="voice">
-          <div class="md_heading">
-            <div>EnterpriseNGR |</div>
-            <div>Voice of Enterprise</div>
-          </div>
-          <div class="thin">
-            Annual EnterpriseNGR event to engage key industry stakeholders (both
-            globally and in Nigeria) as well as policymakers at all levels of
-            government.
-          </div>
-          <a href="greenstart.html"
-            ><button class="md_btn">
-              <span
-                class="iconify"
-                data-icon="bi:arrow-right-circle-fill"
-                style="color: black"
-                data-width="26"
-              ></span
-              ><span class="btn_text">Learn More</span>
-            </button></a
-          >
-        </div>
-        <div class="green">
-          <div>JOIN NOW</div>
-          <div class="md_heading">Monthly Newsletter</div>
-          <form action="">
-            <input type="email" placeholder="Enter your email address" />
-            <button class="md_btn">
-              <span
-                class="iconify"
-                data-icon="bi:arrow-right-circle-fill"
-                style="color: #40ba7b"
-                data-width="26"
-              ></span
-              ><span class="btn_text">Subscribe</span>
-            </button>
-          </form>
         </div>
       </div>
     </section>
