--- a/policy.html
+++ b/policy.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="./style/main.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-    <title>Our Agenda</title>
+    <title>Document</title>
   </head>
-
   <body>
     <header class="header">
       <nav>
@@ -35,87 +34,162 @@
         </label>
       </nav>
 
-      <div class="landing_page">
-        <div class="heading">Policy</div>
-        <div class="heading">and</div>
-        <div class="heading">Research.</div>
-      </div>
+      <section class="landing_page">
+        <div class="heading">Policy &</div>
+        <div class="heading">Research</div>
+      </section>
     </header>
 
-    <section class="economy">
-      <div class="sm_heading">
-        To position Nigeria as a leading financial centre in Africa and the
-        world.
-      </div>
-      <div class="md_heading">
-        We aim to advance this agenda by actively collaborating with our
-        members, industry partners, and stakeholders.
-      </div>
-
-      <div class="economy_grid">
-        <div class="img">
-          <img src="/images/economy.png" alt="Economy" />
-        </div>
-
-        <div class="economy_description">
-          <div class="bold">
-            We focus our activities on key areas that affect our members and
-            where our cross-sectoral remit allows us to make the greatest
-            impact. These are:
+    <section class="latest_news media">
+      <div class="news">
+        <div class="cards">
+          <div class="card">
+            <div class="image">
+              <img src="/images/Rectangle 83.png" alt="" />
+            </div>
+            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
+            <div class="bold title">New Report: 2022 State of Enterprise</div>
+            <div class="text">
+              <div class="thin description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                non sapien accumsan, commodo turpis a, accumsan sem.
+              </div>
+              <a href="newsitem.html">
+                <button class="md_btn">
+                  <span
+                    class="iconify"
+                    data-icon="bi:arrow-right-circle-fill"
+                    style="color: black"
+                    data-width="26"
+                  ></span>
+                  <span class="btn_text">Read More</span>
+                </button></a
+              >
+            </div>
           </div>
-          <div>
-            <ul>
-              <li>
-                <span
-                  class="iconify"
-                  data-icon="bi:arrow-right-circle-fill"
-                  style="color: #40ba7b"
-                  data-width="26"
-                ></span
-                >Financial Inclusion.
-              </li>
-              <li>
-                <span
-                  class="iconify"
-                  data-icon="bi:arrow-right-circle-fill"
-                  style="color: #40ba7b"
-                  data-width="26"
-                ></span
-                >Digitization.
-              </li>
-              <li>
-                <span
-                  class="iconify"
-                  data-icon="bi:arrow-right-circle-fill"
-                  style="color: #40ba7b"
-                  data-width="26"
-                ></span
-                >Regionalization.
-              </li>
-            </ul>
+          <div class="card">
+            <div class="image">
+              <img src="/images/Rectangle 83.png" alt="" />
+            </div>
+            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
+            <div class="bold title">New Report: 2022 State of Enterprise</div>
+            <div class="text">
+              <div class="thin description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                non sapien accumsan, commodo turpis a, accumsan sem.
+              </div>
+              <a href="newsitem.html">
+                <button class="md_btn">
+                  <span
+                    class="iconify"
+                    data-icon="bi:arrow-right-circle-fill"
+                    style="color: black"
+                    data-width="26"
+                  ></span>
+                  <span class="btn_text">Read More</span>
+                </button></a
+              >
+            </div>
           </div>
-          <div class="thin">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, autem
-            ab recusandae similique id delectus quas neque ad eius minima! Esse
-            earum incidunt saepe. Cumque, magni qui. Consectetur quasi
-            voluptatum, culpa alias beatae dolore ab minima voluptate obcaecati,
-            repellendus et magni optio recusandae impedit accusantium.
-            Doloribus, officia aliquam amet quo labore quam et sed enim fugiat
-            eius, esse itaque maxime excepturi corrupti quas consectetur
-            pariatur tempore quidem, laudantium repellat. Sunt, dolor debitis
-            enim ratione maiores eveniet expedita atque praesentium quas,
-            mollitia, accusantium cum voluptatibus. Corporis tenetur sequi
-            reiciendis doloribus consectetur modi accusamus voluptatibus quo
-            quia quas nemo officia qui minima, harum sapiente iure placeat
-            consequatur odit pariatur reprehenderit maxime? Dolorem repellendus
-            exercitationem mollitia laudantium reiciendis sint odit porro
-            ducimus pariatur rerum officiis beatae adipisci aut quos dignissimos
-            minima quis, perferendis ipsam tenetur accusamus necessitatibus
+          <div class="card">
+            <div class="image">
+              <img src="/images/Rectangle 83.png" alt="" />
+            </div>
+            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
+            <div class="bold title">New Report: 2022 State of Enterprise</div>
+            <div class="text">
+              <div class="thin description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                non sapien accumsan, commodo turpis a, accumsan sem.
+              </div>
+              <a href="newsitem.html">
+                <button class="md_btn">
+                  <span
+                    class="iconify"
+                    data-icon="bi:arrow-right-circle-fill"
+                    style="color: black"
+                    data-width="26"
+                  ></span>
+                  <span class="btn_text">Read More</span>
+                </button></a
+              >
+            </div>
+          </div>
+          <div class="card">
+            <div class="image">
+              <img src="/images/Rectangle 83.png" alt="" />
+            </div>
+            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
+            <div class="bold title">New Report: 2022 State of Enterprise</div>
+            <div class="text">
+              <div class="thin description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                non sapien accumsan, commodo turpis a, accumsan sem.
+              </div>
+              <a href="newsitem.html">
+                <button class="md_btn">
+                  <span
+                    class="iconify"
+                    data-icon="bi:arrow-right-circle-fill"
+                    style="color: black"
+                    data-width="26"
+                  ></span>
+                  <span class="btn_text">Read More</span>
+                </button></a
+              >
+            </div>
+          </div>
+          <div class="card">
+            <div class="image">
+              <img src="/images/Rectangle 83.png" alt="" />
+            </div>
+            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
+            <div class="bold title">New Report: 2022 State of Enterprise</div>
+            <div class="text">
+              <div class="thin description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                non sapien accumsan, commodo turpis a, accumsan sem.
+              </div>
+              <a href="newsitem.html">
+                <button class="md_btn">
+                  <span
+                    class="iconify"
+                    data-icon="bi:arrow-right-circle-fill"
+                    style="color: black"
+                    data-width="26"
+                  ></span>
+                  <span class="btn_text">Read More</span>
+                </button></a
+              >
+            </div>
+          </div>
+          <div class="card">
+            <div class="image">
+              <img src="/images/Rectangle 83.png" alt="" />
+            </div>
+            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
+            <div class="bold title">New Report: 2022 State of Enterprise</div>
+            <div class="text">
+              <div class="thin description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                non sapien accumsan, commodo turpis a, accumsan sem.
+              </div>
+              <a href="newsitem.html">
+                <button class="md_btn">
+                  <span
+                    class="iconify"
+                    data-icon="bi:arrow-right-circle-fill"
+                    style="color: black"
+                    data-width="26"
+                  ></span>
+                  <span class="btn_text">Read More</span>
+                </button></a
+              >
+            </div>
           </div>
         </div>
       </div>
     </section>
-
     <footer>
       <div class="contact_info">
         <div><img src="/images/EnterpriseNGRLogo.png" /></div>
@@ -153,7 +227,6 @@
         <div>© 2022 EnterpriseNGR - All Rights Reserved</div>
       </div>
     </footer>
-
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
     <script src="/js/main.js"></script>
   </body>
