--- a/news.html
+++ b/news.html
@@ -35,69 +35,25 @@
       </nav>
 
       <section class="landing_page">
-        <div class="heading">Media and Events</div>
+        <div class="heading">News &</div>
+        <div class="heading">Media</div>
       </section>
     </header>
 
-    <section class="news_article">
-      <div class="md_heading">2022 State of Enterprise</div>
-      <div class="thin">Caption</div>
-      <div class="article_img"><img src="/images/finewoman.png" alt="" /></div>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste architecto
-        maxime natus itaque unde dolorum beatae, sunt aliquid voluptatibus rerum
-        est quibusdam consequatur quod laboriosam? Et suscipit eos dicta
-        repellat beatae accusamus laudantium nostrum similique reiciendis culpa.
-        Ea ad eius quibusdam provident nemo! In officiis provident ex deserunt
-        dolorem voluptatum maiores incidunt earum eligendi quo similique
-        necessitatibus quos, alias consequatur beatae libero modi quidem
-        suscipit itaque ipsam asperiores qui neque tenetur. Alias unde, laborum
-        iste quae ex illum perferendis voluptatum inventore incidunt? Alias
-        cupiditate iusto omnis, aliquid odit nihil laudantium neque suscipit
-        fugit molestiae est cum? Tempore sint accusamus pariatur.
-      </p>
-      <br />
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste architecto
-        maxime natus itaque unde dolorum beatae, sunt aliquid voluptatibus rerum
-        est quibusdam consequatur quod laboriosam? Et suscipit eos dicta
-        repellat beatae accusamus laudantium nostrum similique reiciendis culpa.
-        Ea ad eius quibusdam provident nemo! In officiis provident ex deserunt
-        dolorem voluptatum maiores incidunt earum eligendi quo similique
-        necessitatibus quos, alias consequatur beatae libero modi quidem
-        suscipit itaque ipsam asperiores qui neque tenetur. Alias unde, laborum
-        iste quae ex illum perferendis voluptatum inventore incidunt? Alias
-        cupiditate iusto omnis, aliquid odit nihil laudantium neque suscipit
-        fugit molestiae est cum? Tempore sint accusamus pariatur.
-      </p>
-      <br />
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste architecto
-        maxime natus itaque unde dolorum beatae, sunt aliquid voluptatibus rerum
-        est quibusdam consequatur quod laboriosam? Et suscipit eos dicta
-        repellat beatae accusamus laudantium nostrum similique reiciendis culpa.
-        Ea ad eius quibusdam provident nemo! In officiis provident ex deserunt
-        dolorem voluptatum maiores incidunt earum eligendi quo similique
-        necessitatibus quos, alias consequatur beatae libero modi quidem
-        suscipit itaque ipsam asperiores qui neque tenetur. Alias unde, laborum
-        iste quae ex illum perferendis voluptatum inventore incidunt? Alias
-        cupiditate iusto omnis, aliquid odit nihil laudantium neque suscipit
-        fugit molestiae est cum? Tempore sint accusamus pariatur.
-      </p>
-    </section>
-
-    <section class="latest_news">
+    <section class="latest_news media">
       <div class="news">
-        <div class="md_heading">Related News</div>
         <div class="cards">
           <div class="card">
             <div class="image">
               <img src="/images/Rectangle 83.png" alt="" />
             </div>
-            <div class="sm_heading text">19 May 2022</div>
-            <div class="bold text">New Report: 2022 State of Enterprise</div>
+            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
+            <div class="bold title">New Report: 2022 State of Enterprise</div>
             <div class="text">
+              <div class="thin description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                non sapien accumsan, commodo turpis a, accumsan sem.
+              </div>
               <a href="newsitem.html">
                 <button class="md_btn">
                   <span
@@ -113,51 +69,15 @@
           </div>
           <div class="card">
             <div class="image">
-              <img src="/images/Rectangle 87.png" alt="" />
+              <img src="/images/Rectangle 83.png" alt="" />
             </div>
-            <div class="sm_heading text">19 May 2022</div>
-            <div class="bold text">New Report: 2022 State of Enterprise</div>
+            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
+            <div class="bold title">New Report: 2022 State of Enterprise</div>
             <div class="text">
-              <a href="newsitem.html"
-                ><button class="md_btn">
-                  <span
-                    class="iconify"
-                    data-icon="bi:arrow-right-circle-fill"
-                    style="color: black"
-                    data-width="26"
-                  ></span>
-                  <span class="btn_text">Read More</span>
-                </button></a
-              >
-            </div>
-          </div>
-          <div class="card">
-            <div class="image">
-              <img src="/images/Rectangle 91.png" alt="" />
-            </div>
-            <div class="sm_heading text">19 May 2022</div>
-            <div class="bold text">New Report: 2022 State of Enterprise</div>
-            <div class="text">
-              <a href="newsitem.html"
-                ><button class="md_btn">
-                  <span
-                    class="iconify"
-                    data-icon="bi:arrow-right-circle-fill"
-                    style="color: black"
-                    data-width="26"
-                  ></span>
-                  <span class="btn_text">Read More</span>
-                </button></a
-              >
-            </div>
-          </div>
-          <div class="card">
-            <div class="image">
-              <img src="/images/Rectangle 95.png" alt="" />
-            </div>
-            <div class="sm_heading text">19 May 2022</div>
-            <div class="bold text">New Report: 2022 State of Enterprise</div>
-            <div class="text">
+              <div class="thin description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                non sapien accumsan, commodo turpis a, accumsan sem.
+              </div>
               <a href="newsitem.html">
                 <button class="md_btn">
                   <span
@@ -171,47 +91,102 @@
               >
             </div>
           </div>
-        </div>
-      </div>
-
-      <div class="enterprise_voice">
-        <div class="voice">
-          <div class="md_heading">
-            <div>EnterpriseNGR |</div>
-            <div>Voice of Enterprise</div>
+          <div class="card">
+            <div class="image">
+              <img src="/images/Rectangle 83.png" alt="" />
+            </div>
+            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
+            <div class="bold title">New Report: 2022 State of Enterprise</div>
+            <div class="text">
+              <div class="thin description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                non sapien accumsan, commodo turpis a, accumsan sem.
+              </div>
+              <a href="newsitem.html">
+                <button class="md_btn">
+                  <span
+                    class="iconify"
+                    data-icon="bi:arrow-right-circle-fill"
+                    style="color: black"
+                    data-width="26"
+                  ></span>
+                  <span class="btn_text">Read More</span>
+                </button></a
+              >
+            </div>
           </div>
-          <div class="thin">
-            Annual EnterpriseNGR event to engage key industry stakeholders (both
-            globally and in Nigeria) as well as policymakers at all levels of
-            government.
+          <div class="card">
+            <div class="image">
+              <img src="/images/Rectangle 83.png" alt="" />
+            </div>
+            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
+            <div class="bold title">New Report: 2022 State of Enterprise</div>
+            <div class="text">
+              <div class="thin description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                non sapien accumsan, commodo turpis a, accumsan sem.
+              </div>
+              <a href="newsitem.html">
+                <button class="md_btn">
+                  <span
+                    class="iconify"
+                    data-icon="bi:arrow-right-circle-fill"
+                    style="color: black"
+                    data-width="26"
+                  ></span>
+                  <span class="btn_text">Read More</span>
+                </button></a
+              >
+            </div>
           </div>
-          <a href="greenstart.html"
-            ><button class="md_btn">
-              <span
-                class="iconify"
-                data-icon="bi:arrow-right-circle-fill"
-                style="color: black"
-                data-width="26"
-              ></span
-              ><span class="btn_text">Learn More</span>
-            </button></a
-          >
-        </div>
-        <div class="green">
-          <div>JOIN NOW</div>
-          <div class="md_heading">Monthly Newsletter</div>
-          <form action="">
-            <input type="email" placeholder="Enter your email address" />
-            <button class="md_btn">
-              <span
-                class="iconify"
-                data-icon="bi:arrow-right-circle-fill"
-                style="color: #40ba7b"
-                data-width="26"
-              ></span
-              ><span class="btn_text">Subscribe</span>
-            </button>
-          </form>
+          <div class="card">
+            <div class="image">
+              <img src="/images/Rectangle 83.png" alt="" />
+            </div>
+            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
+            <div class="bold title">New Report: 2022 State of Enterprise</div>
+            <div class="text">
+              <div class="thin description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                non sapien accumsan, commodo turpis a, accumsan sem.
+              </div>
+              <a href="newsitem.html">
+                <button class="md_btn">
+                  <span
+                    class="iconify"
+                    data-icon="bi:arrow-right-circle-fill"
+                    style="color: black"
+                    data-width="26"
+                  ></span>
+                  <span class="btn_text">Read More</span>
+                </button></a
+              >
+            </div>
+          </div>
+          <div class="card">
+            <div class="image">
+              <img src="/images/Rectangle 83.png" alt="" />
+            </div>
+            <div class="thin date">April 12 2022 | EnterpriseNGR</div>
+            <div class="bold title">New Report: 2022 State of Enterprise</div>
+            <div class="text">
+              <div class="thin description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                non sapien accumsan, commodo turpis a, accumsan sem.
+              </div>
+              <a href="newsitem.html">
+                <button class="md_btn">
+                  <span
+                    class="iconify"
+                    data-icon="bi:arrow-right-circle-fill"
+                    style="color: black"
+                    data-width="26"
+                  ></span>
+                  <span class="btn_text">Read More</span>
+                </button></a
+              >
+            </div>
+          </div>
         </div>
       </div>
     </section>
