--- a/newsitem.html
+++ b/newsitem.html
@@ -123,13 +123,18 @@
           </div>
         </div>
         <div class="tag">
-          <span class="bold">Tags</span>
+          <span class="bold">Tags:</span>
           <span class="thin">Policy</span>
           <span class="thin">Insight</span>
           <span class="thin">Enterprise</span>
         </div>
       </div>
-      <div class="search"></div>
+      <div class="search">
+        <form action="">
+          <label for="search" class="bold">Search</label>
+          <input type="text" placeholder="Search Keywords..." />
+        </form>
+      </div>
     </article>
 
     <section class="latest_news newscard">
