--- a/news.html
+++ b/news.html
@@ -12,7 +12,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header news">
       <nav>
         <label class="logo"
           ><a href="index.html"
