--- a/policy.html
+++ b/policy.html
@@ -12,7 +12,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header policy">
       <nav>
         <label class="logo"
           ><a href="index.html"
