--- a/about.html
+++ b/about.html
@@ -343,7 +343,7 @@
                 <img src="/images/uchechiakinwale.png" alt="" />
               </div>
               <div class="sm_heading text">
-                Uchechi Akinwale-Oluwole |
+                Uchechi Oluwole-Akinwale |
                 <a href=""
                   ><span
                     class="iconify-inline link"
