--- a/member.html
+++ b/member.html
@@ -407,7 +407,7 @@
         <div><img src="/images/EnterpriseNGRLogo.png" /></div>
         <div class="column">
           <div class="phone">+234 812 235 0250</div>
-          <div>contact@enterprisengr.com</div>
+          <div>contactus@enterprisengr.com</div>
           <div>
             106 1B Abagbon Close, Off Adeola Odeku Victoria Island, Lagos.
           </div>
