--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
               data-height="35"
             ></span
             ><span class="icon_item"
-              ><a href="">contact@enterprisengr.com</a>
+              ><a href="">contactus@enterprisengr.com</a>
             </span>
           </div>
           <div class="social_icons">
@@ -145,7 +145,7 @@
         <div><img src="/images/EnterpriseNGRLogo.png" /></div>
         <div class="column">
           <div class="phone">+234 812 235 0250</div>
-          <div>contact@enterprisengr.com</div>
+          <div>contactus@enterprisengr.com</div>
           <div>
             106 1B Abagbon Close, Off Adeola Odeku Victoria Island, Lagos.
           </div>
