--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
             </div>
           </div>
           <div class="img">
-            <img src="/images/economy.png" alt="Economy" />
+            <img src="/images/about0002.png" alt="Economy" />
           </div>
         </div>
       </div>
@@ -388,7 +388,7 @@
                   ></span
                 ></a>
               </div>
-              <div class="bold text">Director, Programs</div>
+              <div class="bold text">Head of Programmes</div>
             </div>
             <div class="card">
               <div class="image">
