--- a/member.html
+++ b/member.html
@@ -48,7 +48,7 @@
 
       <div class="economy_grid">
         <div class="img">
-          <img src="/images/economy.png" alt="Economy" />
+          <img src="/images/member001.png" alt="Economy" />
         </div>
 
         <div class="economy_description">
@@ -112,7 +112,7 @@
                   style="color: black"
                   data-width="26"
                 ></span>
-                <span class="btn_text">Read More</span>
+                <span class="btn_text">View All</span>
               </button></a
             >
           </div>
