--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,9 @@
               data-height="35"
             ></span
             ><span class="icon_item"
-              ><a href="">contactus@enterprisengr.com</a>
+              ><a href="mailto:contactus@enterprisengr.com"
+                >contactus@enterprisengr.com</a
+              >
             </span>
           </div>
           <div class="social_icons">
