--- a/newsitem.html
+++ b/newsitem.html
@@ -132,7 +132,7 @@
       <div class="search">
         <form action="">
           <label for="search" class="bold">Search</label>
-          <input type="text" placeholder="Search Keywords..." />
+          <input type="search" placeholder="Search Keywords..." />
         </form>
       </div>
     </article>
