--- a/newsitem.html
+++ b/newsitem.html
@@ -9,6 +9,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
+    <script
+      src="https://kit.fontawesome.com/688bb52c0a.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="" />
     <title>Document</title>
   </head>
   <body>
@@ -133,6 +138,10 @@
         <form action="">
           <label for="search" class="bold">Search</label>
           <input type="search" placeholder="Search Keywords..." />
+
+          <button class="search_btn">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
         </form>
       </div>
     </article>
