--- a/member.html
+++ b/member.html
@@ -228,18 +228,45 @@
     <section class="founding_members">
       <div class="md_heading">Our Founding Members</div>
       <div class="img_grid">
-        <div><img src="/images/img1.png" alt="partner_logo" /></div>
-        <div><img src="/images/img2.png" alt="partner_logo" /></div>
-        <div><img src="/images/img3.png" alt="partner_logo" /></div>
-        <div><img src="/images/img4.png" alt="partner_logo" /></div>
-        <div><img src="/images/img5.png" alt="partner_logo" /></div>
-        <div><img src="/images/img6.png" alt="partner_logo" /></div>
-        <div><img src="/images/img7.png" alt="partner_logo" /></div>
-        <div><img src="/images/img8.png" alt="partner_logo" /></div>
-        <div><img src="/images/img9.png" alt="partner_logo" /></div>
-        <div><img src="/images/img10.png" alt="partner_logo" /></div>
-        <div><img src="/images/img11.png" alt="partner_logo" /></div>
-        <div><img src="/images/img12.png" alt="partner_logo" /></div>
+        <div class="image">
+          <img src="/images/img1.png" alt="partner_logo" />
+        </div>
+        <div class="image">
+          <img src="/images/img2.png" alt="partner_logo" />
+        </div>
+        <div class="image">
+          <img src="/images/img3.png" alt="partner_logo" />
+        </div>
+        <div class="image">
+          <img src="/images/img4.png" alt="partner_logo" />
+        </div>
+        <div class="image">
+          <img src="/images/img5.png" alt="partner_logo" />
+        </div>
+        <div class="image">
+          <img src="/images/img6.png" alt="partner_logo" />
+        </div>
+        <div class="image">
+          <img src="/images/img7.png" alt="partner_logo" />
+        </div>
+        <div class="image">
+          <img src="/images/img8.png" alt="partner_logo" />
+        </div>
+        <div class="image">
+          <img src="/images/img9.png" alt="partner_logo" />
+        </div>
+        <div class="image">
+          <img src="/images/img10.png" alt="partner_logo" />
+        </div>
+        <div class="image">
+          <img src="/images/img11.png" alt="partner_logo" />
+        </div>
+        <div class="image">
+          <img src="/images/img12.png" alt="partner_logo" />
+        </div>
+        <div class="image">
+          <img src="/images/Investmentonelogo.png" alt="partner_logo" />
+        </div>
       </div>
     </section>
 
