updated img and style

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="style/main.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -17,7 +17,7 @@
         <label class="logo"
           ><a href="index.html"
             ><img
-              src="/images/EnterpriseNGRLogo.png"
+              src="images/EnterpriseNGRLogo.png"
               alt="EnterpriseNGR_Logo" /></a
         ></label>
         <ul id="menu">
@@ -51,7 +51,7 @@
 
       <div class="economy_grid">
         <div class="img">
-          <img src="/images/about001.png" alt="Economy" />
+          <img src="images/about001.png" alt="Economy" />
         </div>
 
         <div class="economy_description">
@@ -114,7 +114,7 @@
             </div>
           </div>
           <div class="img">
-            <img src="/images/about0002.png" alt="Economy" />
+            <img src="images/about0002.png" alt="Economy" />
           </div>
         </div>
       </div>
@@ -122,7 +122,7 @@
       <div class="economy">
         <div class="economy_grid">
           <div class="img">
-            <img src="/images/about1.png" alt="Economy" />
+            <img src="images/about1.png" alt="Economy" />
           </div>
 
           <div class="economy_description">
@@ -171,7 +171,7 @@
         </div>
 
         <div class="img history">
-          <img src="/images/about2.png" alt="Economy" />
+          <img src="images/about2.png" alt="Economy" />
         </div>
       </div>
     </section>
@@ -179,7 +179,7 @@
     <section class="economy">
       <div class="economy_grid">
         <div class="img history">
-          <img src="/images/about3.png" alt="Economy" />
+          <img src="images/about3.png" alt="Economy" />
         </div>
 
         <div class="economy_description">
@@ -311,7 +311,7 @@
       </div>
     </section>
 
-    <section class="latest_news hover">
+    <section class="latest_news team">
       <div class="news">
         <div class="news">
           <div class="md_heading">Our Team</div>
@@ -323,7 +323,7 @@
           <div class="cards">
             <div class="card">
               <div class="image">
-                <img src="/images/ObiIbekwe.png" alt="" />
+                <img src="images/ObiIbekwe.png" alt="" />
               </div>
               <div class="sm_heading text">
                 Obi Ibekwe |
@@ -340,7 +340,7 @@
             </div>
             <div class="card">
               <div class="image">
-                <img src="/images/uchechiakinwale.png" alt="" />
+                <img src="images/uchechiakinwale.png" alt="" />
               </div>
               <div class="sm_heading text">
                 Uchechi Oluwole-Akinwale |
@@ -357,7 +357,7 @@
             </div>
             <div class="card">
               <div class="image">
-                <img src="/images/lamiadekola.png" alt="" />
+                <img src="images/lamiadekola.png" alt="" />
               </div>
               <div class="sm_heading text">
                 Lami Adekola |
@@ -375,7 +375,7 @@
 
             <div class="card">
               <div class="image">
-                <img src="/images/ogennaife.png" alt="" />
+                <img src="images/ogennaife.png" alt="" />
               </div>
               <div class="sm_heading text">
                 Oge Nnaife |
@@ -392,7 +392,7 @@
             </div>
             <div class="card">
               <div class="image">
-                <img src="/images/tayomuritala.png" alt="" />
+                <img src="images/tayomuritala.png" alt="" />
               </div>
               <div class="sm_heading text">
                 Tayo Muritala |
@@ -409,7 +409,7 @@
             </div>
             <div class="card">
               <div class="image">
-                <img src="/images/sochiazuh.png" alt="" />
+                <img src="images/sochiazuh.png" alt="" />
               </div>
               <div class="sm_heading text">
                 Sochi Azuh |
@@ -495,7 +495,7 @@
 
     <footer>
       <div class="contact_info">
-        <div><img src="/images/EnterpriseNGRLogo.png" /></div>
+        <div><img src="images/EnterpriseNGRLogo.png" /></div>
         <div class="column">
           <div class="phone">+234 812 235 0250</div>
           <div>contactus@enterprisengr.com</div>
@@ -514,13 +514,13 @@
           <div><a href="about.html">About EnterpriseNGR</a></div>
           <div class="social_icons">
             <div class="item">
-              <a href=""><img src="/images/Vector.png" alt="" /></a>
+              <a href=""><img src="images/Vector.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="/images/ig.png" alt="" /></a>
+              <a href=""><img src="images/ig.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="/images/twitter.png" alt="" /></a>
+              <a href=""><img src="images/twitter.png" alt="" /></a>
             </div>
           </div>
         </div>
@@ -531,6 +531,6 @@
       </div>
     </footer>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
