--- a/agenda.html
+++ b/agenda.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="style/main.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -17,7 +17,7 @@
         <label class="logo"
           ><a href="index.html"
             ><img
-              src="/images/EnterpriseNGRLogo.png"
+              src="images/EnterpriseNGRLogo.png"
               alt="EnterpriseNGR_Logo" /></a
         ></label>
         <ul id="menu">
@@ -52,7 +52,7 @@
 
       <div class="economy_grid">
         <div class="img">
-          <img src="/images/agenda1.png" alt="Economy" />
+          <img src="images/agenda1.png" alt="Economy" />
         </div>
 
         <div class="economy_description">
@@ -293,7 +293,7 @@
         <div class="cards">
           <div class="card">
             <div class="image">
-              <img src="/images/Rectangle 83.png" alt="" />
+              <img src="images/Rectangle 83.png" alt="" />
             </div>
             <div class="sm_heading text">19 May 2022</div>
             <div class="bold text">New Report: 2022 State of Enterprise</div>
@@ -313,7 +313,7 @@
           </div>
           <div class="card">
             <div class="image">
-              <img src="/images/Rectangle 87.png" alt="" />
+              <img src="images/Rectangle 87.png" alt="" />
             </div>
             <div class="sm_heading text">19 May 2022</div>
             <div class="bold text">New Report: 2022 State of Enterprise</div>
@@ -333,7 +333,7 @@
           </div>
           <div class="card">
             <div class="image">
-              <img src="/images/Rectangle 91.png" alt="" />
+              <img src="images/Rectangle 91.png" alt="" />
             </div>
             <div class="sm_heading text">19 May 2022</div>
             <div class="bold text">New Report: 2022 State of Enterprise</div>
@@ -353,7 +353,7 @@
           </div>
           <div class="card">
             <div class="image">
-              <img src="/images/Rectangle 95.png" alt="" />
+              <img src="images/Rectangle 95.png" alt="" />
             </div>
             <div class="sm_heading text">19 May 2022</div>
             <div class="bold text">New Report: 2022 State of Enterprise</div>
@@ -418,7 +418,7 @@
 
     <footer>
       <div class="contact_info">
-        <div><img src="/images/EnterpriseNGRLogo.png" /></div>
+        <div><img src="images/EnterpriseNGRLogo.png" /></div>
         <div class="column">
           <div class="phone">+234 812 235 0250</div>
           <div>contactus@enterprisengr.com</div>
@@ -437,13 +437,13 @@
           <div><a href="about.html">About EnterpriseNGR</a></div>
           <div class="social_icons">
             <div class="item">
-              <a href=""><img src="/images/Vector.png" alt="" /></a>
+              <a href=""><img src="images/Vector.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="/images/ig.png" alt="" /></a>
+              <a href=""><img src="images/ig.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="/images/twitter.png" alt="" /></a>
+              <a href=""><img src="images/twitter.png" alt="" /></a>
             </div>
           </div>
         </div>
@@ -454,6 +454,6 @@
       </div>
     </footer>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
