--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="style/main.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -17,7 +17,7 @@
         <label class="logo"
           ><a href="index.html"
             ><img
-              src="/images/EnterpriseNGRLogo.png"
+              src="images/EnterpriseNGRLogo.png"
               alt="EnterpriseNGR_Logo" /></a
         ></label>
         <ul id="menu">
@@ -144,7 +144,7 @@
 
     <footer>
       <div class="contact_info">
-        <div><img src="/images/EnterpriseNGRLogo.png" /></div>
+        <div><img src="images/EnterpriseNGRLogo.png" /></div>
         <div class="column">
           <div class="phone">+234 812 235 0250</div>
           <div>contactus@enterprisengr.com</div>
@@ -163,13 +163,13 @@
           <div><a href="about.html">About EnterpriseNGR</a></div>
           <div class="social_icons">
             <div class="item">
-              <a href=""><img src="/images/Vector.png" alt="" /></a>
+              <a href=""><img src="images/Vector.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="/images/ig.png" alt="" /></a>
+              <a href=""><img src="images/ig.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="/images/twitter.png" alt="" /></a>
+              <a href=""><img src="images/twitter.png" alt="" /></a>
             </div>
           </div>
         </div>
@@ -179,7 +179,7 @@
         <div>© 2022 EnterpriseNGR - All Rights Reserved</div>
       </div>
     </footer>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   </body>
