--- a/greenstart.html
+++ b/greenstart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="style/main.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -17,7 +17,7 @@
         <label class="logo"
           ><a href="index.html"
             ><img
-              src="/images/EnterpriseNGRLogo.png"
+              src="images/EnterpriseNGRLogo.png"
               alt="EnterpriseNGR_Logo" /></a
         ></label>
         <ul id="menu">
@@ -78,7 +78,7 @@
         </div>
 
         <div class="img">
-          <img src="/images/yoe1.png" alt="Economy" />
+          <img src="images/yoe1.png" alt="Economy" />
         </div>
       </div>
     </section>
@@ -87,7 +87,7 @@
       <div class="md_heading">Taming Unemployment</div>
       <div class="economy_grid">
         <div class="img">
-          <img src="/images/finewoman.png" alt="Economy" />
+          <img src="images/finewoman.png" alt="Economy" />
         </div>
 
         <div class="economy_description">
@@ -153,7 +153,7 @@
           </div>
 
           <div class="img">
-            <img src="/images/greenstart001.png" alt="Economy" />
+            <img src="images/greenstart001.png" alt="Economy" />
           </div>
         </div>
       </section>
@@ -186,7 +186,7 @@
         </div>
 
         <div class="img">
-          <img src="/images/greenstart2.png" alt="Economy" />
+          <img src="images/greenstart2.png" alt="Economy" />
         </div>
       </div>
     </section>
@@ -308,7 +308,7 @@
 
     <footer>
       <div class="contact_info">
-        <div><img src="/images/EnterpriseNGRLogo.png" /></div>
+        <div><img src="images/EnterpriseNGRLogo.png" /></div>
         <div class="column">
           <div class="phone">+234 812 235 0250</div>
           <div>contactus@enterprisengr.com</div>
@@ -327,13 +327,13 @@
           <div><a href="about.html">About EnterpriseNGR</a></div>
           <div class="social_icons">
             <div class="item">
-              <a href=""><img src="/images/Vector.png" alt="" /></a>
+              <a href=""><img src="images/Vector.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="/images/ig.png" alt="" /></a>
+              <a href=""><img src="images/ig.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="/images/twitter.png" alt="" /></a>
+              <a href=""><img src="images/twitter.png" alt="" /></a>
             </div>
           </div>
         </div>
@@ -344,6 +344,6 @@
       </div>
     </footer>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
