--- a/member.html
+++ b/member.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="style/main.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -17,7 +17,7 @@
         <label class="logo"
           ><a href="index.html"
             ><img
-              src="/images/EnterpriseNGRLogo.png"
+              src="images/EnterpriseNGRLogo.png"
               alt="EnterpriseNGR_Logo" /></a
         ></label>
         <ul id="menu">
@@ -48,7 +48,7 @@
 
       <div class="economy_grid">
         <div class="img">
-          <img src="/images/member001.png" alt="Economy" />
+          <img src="images/member001.png" alt="Economy" />
         </div>
 
         <div class="economy_description">
@@ -117,7 +117,7 @@
             >
           </div>
           <div class="img">
-            <img src="/images/member002.png" alt="" />
+            <img src="images/member002.png" alt="" />
           </div>
         </div>
       </div>
@@ -229,43 +229,43 @@
       <div class="md_heading">Our Founding Members</div>
       <div class="img_grid">
         <div class="image">
-          <img src="/images/img1.png" alt="partner_logo" />
+          <img src="images/img1.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="/images/img2.png" alt="partner_logo" />
+          <img src="images/img2.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="/images/img3.png" alt="partner_logo" />
+          <img src="images/img3.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="/images/img4.png" alt="partner_logo" />
+          <img src="images/img4.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="/images/img5.png" alt="partner_logo" />
+          <img src="images/img5.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="/images/img6.png" alt="partner_logo" />
+          <img src="images/img6.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="/images/img7.png" alt="partner_logo" />
+          <img src="images/img7.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="/images/img8.png" alt="partner_logo" />
+          <img src="images/img8.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="/images/img9.png" alt="partner_logo" />
+          <img src="images/img9.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="/images/img10.png" alt="partner_logo" />
+          <img src="images/img10.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="/images/img11.png" alt="partner_logo" />
+          <img src="images/img11.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="/images/img12.png" alt="partner_logo" />
+          <img src="images/img12.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="/images/Investmentonelogo.png" alt="partner_logo" />
+          <img src="images/Investmentonelogo.png" alt="partner_logo" />
         </div>
       </div>
     </section>
@@ -305,7 +305,7 @@
           <div class="cards">
             <div class="card">
               <div class="image">
-                <img src="/images/Rectangle 83.png" alt="" />
+                <img src="images/Rectangle 83.png" alt="" />
               </div>
               <div class="sm_heading text">19 May 2022</div>
               <div class="bold text">New Report: 2022 State of Enterprise</div>
@@ -325,7 +325,7 @@
             </div>
             <div class="card">
               <div class="image">
-                <img src="/images/Rectangle 87.png" alt="" />
+                <img src="images/Rectangle 87.png" alt="" />
               </div>
               <div class="sm_heading text">19 May 2022</div>
               <div class="bold text">New Report: 2022 State of Enterprise</div>
@@ -345,7 +345,7 @@
             </div>
             <div class="card">
               <div class="image">
-                <img src="/images/Rectangle 91.png" alt="" />
+                <img src="images/Rectangle 91.png" alt="" />
               </div>
               <div class="sm_heading text">19 May 2022</div>
               <div class="bold text">New Report: 2022 State of Enterprise</div>
@@ -365,7 +365,7 @@
             </div>
             <div class="card">
               <div class="image">
-                <img src="/images/Rectangle 95.png" alt="" />
+                <img src="images/Rectangle 95.png" alt="" />
               </div>
               <div class="sm_heading text">19 May 2022</div>
               <div class="bold text">New Report: 2022 State of Enterprise</div>
@@ -431,7 +431,7 @@
 
     <footer>
       <div class="contact_info">
-        <div><img src="/images/EnterpriseNGRLogo.png" /></div>
+        <div><img src="images/EnterpriseNGRLogo.png" /></div>
         <div class="column">
           <div class="phone">+234 812 235 0250</div>
           <div>contactus@enterprisengr.com</div>
@@ -450,13 +450,13 @@
           <div><a href="about.html">About EnterpriseNGR</a></div>
           <div class="social_icons">
             <div class="item">
-              <a href=""><img src="/images/Vector.png" alt="" /></a>
+              <a href=""><img src="images/Vector.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="/images/ig.png" alt="" /></a>
+              <a href=""><img src="images/ig.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="/images/twitter.png" alt="" /></a>
+              <a href=""><img src="images/twitter.png" alt="" /></a>
             </div>
           </div>
         </div>
@@ -467,6 +467,6 @@
       </div>
     </footer>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
