--- a/newsitem.html
+++ b/newsitem.html
@@ -46,7 +46,7 @@
     <article class="article">
       <div class="article_body">
         <div class="image">
-          <img src="/images/yoe1.png" alt="" />
+          <img src="images/yoe1.png" alt="" />
         </div>
         <div class="article_detail">
           <div class="child green">Policy,Insight |</div>
@@ -117,13 +117,13 @@
           <div class="text">Share this article</div>
           <div class="social_icons">
             <div class="item">
-              <a href=""><img src="/images/Vector.png" alt="" /></a>
+              <a href=""><img src="images/Vector.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="/images/ig.png" alt="" /></a>
+              <a href=""><img src="images/ig.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="/images/twitter.png" alt="" /></a>
+              <a href=""><img src="images/twitter.png" alt="" /></a>
             </div>
           </div>
         </div>
@@ -156,7 +156,7 @@
         <div class="cards">
           <div class="card">
             <div class="image">
-              <img src="/images/Rectangle 83.png" alt="" />
+              <img src="images/Rectangle 83.png" alt="" />
             </div>
             <div class="sm_heading text">19 May 2022</div>
             <div class="bold text">New Report: 2022 State of Enterprise</div>
@@ -176,7 +176,7 @@
           </div>
           <div class="card">
             <div class="image">
-              <img src="/images/Rectangle 87.png" alt="" />
+              <img src="images/Rectangle 87.png" alt="" />
             </div>
             <div class="sm_heading text">19 May 2022</div>
             <div class="bold text">New Report: 2022 State of Enterprise</div>
@@ -196,7 +196,7 @@
           </div>
           <div class="card">
             <div class="image">
-              <img src="/images/Rectangle 91.png" alt="" />
+              <img src="images/Rectangle 91.png" alt="" />
             </div>
             <div class="sm_heading text">19 May 2022</div>
             <div class="bold text">New Report: 2022 State of Enterprise</div>
@@ -216,7 +216,7 @@
           </div>
           <div class="card">
             <div class="image">
-              <img src="/images/Rectangle 95.png" alt="" />
+              <img src="images/Rectangle 95.png" alt="" />
             </div>
             <div class="sm_heading text">19 May 2022</div>
             <div class="bold text">New Report: 2022 State of Enterprise</div>
@@ -240,7 +240,7 @@
 
     <footer>
       <div class="contact_info">
-        <div><img src="/images/EnterpriseNGRLogo.png" /></div>
+        <div><img src="images/EnterpriseNGRLogo.png" /></div>
         <div class="column">
           <div class="phone">+234 812 235 0250</div>
           <div>contactus@enterprisengr.com</div>
@@ -259,13 +259,13 @@
           <div><a href="about.html">About EnterpriseNGR</a></div>
           <div class="social_icons">
             <div class="item">
-              <a href=""><img src="/images/Vector.png" alt="" /></a>
+              <a href=""><img src="images/Vector.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="/images/ig.png" alt="" /></a>
+              <a href=""><img src="images/ig.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="/images/twitter.png" alt="" /></a>
+              <a href=""><img src="images/twitter.png" alt="" /></a>
             </div>
           </div>
         </div>
@@ -275,7 +275,7 @@
         <div>© 2022 EnterpriseNGR - All Rights Reserved</div>
       </div>
     </footer>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   </body>
 </html>
