--- a/policy.html
+++ b/policy.html
@@ -45,7 +45,7 @@
         <div class="cards">
           <div class="card">
             <div class="image">
-              <img src="/images/Rectangle 83.png" alt="" />
+              <img src="images/Rectangle 83.png" alt="" />
             </div>
             <div class="thin date">April 12 2022 | EnterpriseNGR</div>
             <div class="bold title">New Report: 2022 State of Enterprise</div>
@@ -69,7 +69,7 @@
           </div>
           <div class="card">
             <div class="image">
-              <img src="/images/Rectangle 83.png" alt="" />
+              <img src="images/Rectangle 83.png" alt="" />
             </div>
             <div class="thin date">April 12 2022 | EnterpriseNGR</div>
             <div class="bold title">New Report: 2022 State of Enterprise</div>
@@ -93,7 +93,7 @@
           </div>
           <div class="card">
             <div class="image">
-              <img src="/images/Rectangle 83.png" alt="" />
+              <img src="images/Rectangle 83.png" alt="" />
             </div>
             <div class="thin date">April 12 2022 | EnterpriseNGR</div>
             <div class="bold title">New Report: 2022 State of Enterprise</div>
@@ -117,7 +117,7 @@
           </div>
           <div class="card">
             <div class="image">
-              <img src="/images/Rectangle 83.png" alt="" />
+              <img src="images/Rectangle 83.png" alt="" />
             </div>
             <div class="thin date">April 12 2022 | EnterpriseNGR</div>
             <div class="bold title">New Report: 2022 State of Enterprise</div>
@@ -141,7 +141,7 @@
           </div>
           <div class="card">
             <div class="image">
-              <img src="/images/Rectangle 83.png" alt="" />
+              <img src="images/Rectangle 83.png" alt="" />
             </div>
             <div class="thin date">April 12 2022 | EnterpriseNGR</div>
             <div class="bold title">New Report: 2022 State of Enterprise</div>
@@ -165,7 +165,7 @@
           </div>
           <div class="card">
             <div class="image">
-              <img src="/images/Rectangle 83.png" alt="" />
+              <img src="images/Rectangle 83.png" alt="" />
             </div>
             <div class="thin date">April 12 2022 | EnterpriseNGR</div>
             <div class="bold title">New Report: 2022 State of Enterprise</div>
@@ -192,7 +192,7 @@
     </section>
     <footer>
       <div class="contact_info">
-        <div><img src="/images/EnterpriseNGRLogo.png" /></div>
+        <div><img src="images/EnterpriseNGRLogo.png" /></div>
         <div class="column">
           <div class="phone">+234 812 235 0250</div>
           <div>contactus@enterprisengr.com</div>
@@ -211,13 +211,13 @@
           <div><a href="about.html">About EnterpriseNGR</a></div>
           <div class="social_icons">
             <div class="item">
-              <a href=""><img src="/images/Vector.png" alt="" /></a>
+              <a href=""><img src="images/Vector.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="/images/ig.png" alt="" /></a>
+              <a href=""><img src="images/ig.png" alt="" /></a>
             </div>
             <div class="item">
-              <a href=""><img src="/images/twitter.png" alt="" /></a>
+              <a href=""><img src="images/twitter.png" alt="" /></a>
             </div>
           </div>
         </div>
@@ -228,6 +228,6 @@
       </div>
     </footer>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
