--- a/agenda.html
+++ b/agenda.html
@@ -153,25 +153,25 @@
           <div class="md_heading">2.</div>
           <div class="md_heading">Digitization</div>
           <div>
-            Birth ideas to improve the adoption of technology across various
-            sub-sectors of the Nigerian Financial and Professional Services
-            (FPS) sector.
+            Advocating for increased innovation and adoption of technology
+            across various sub-sectors of the Nigerian Financial and
+            Professional Services (FPS) sector.
           </div>
         </div>
         <div>
           <div class="md_heading">3.</div>
           <div class="md_heading">Regionalization</div>
           <div>
-            Boost the expansion of Nigerian FPS operators across the continent
-            and position Nigeria to tap the benefits of the African Continental
-            Free Trade Area.
+            Facilitate the expansion of Nigerian FPS operators across the
+            continent and position Nigeria to tap the benefits of the African
+            Continental Free Trade Area.
           </div>
         </div>
         <div>
           <div class="md_heading">4.</div>
           <div class="md_heading">International trade & investment</div>
           <div>
-            Publicize Nigeria as a major destination for international trade and
+            Promote Nigeria as a major destination for international trade and
             investment and enable easy transactions.
           </div>
         </div>
@@ -179,9 +179,8 @@
           <div class="md_heading">5.</div>
           <div class="md_heading">Financial Inclusion</div>
           <div>
-            Ensure that individuals and businesses have access to appropriate,
-            affordable, and timely financial products and services, some of
-            which include banking, loan, equity insurance products, etc.
+            Advocate for inclusive access to appropriate, affordable, and timely
+            financial products and services.
           </div>
         </div>
       </div>
@@ -233,18 +232,16 @@
           <div class="md_heading">2.</div>
           <div class="md_heading">Standards</div>
           <div>
-            We will advocate for the highest standards in EnterpriseNGR and the
-            sector while delivering quality self-regulatory initiatives hinged
-            on evidence and global standards.
+            We will advocate for the proactive adoption of the highest standards
+            in the FPS sector in line with global best practices.
           </div>
         </div>
         <div>
           <div class="md_heading">3.</div>
           <div class="md_heading">Advocacy</div>
           <div>
-            We will ensure regular stakeholder engagement, organize regular
-            events, and participate in key sector events to further solidify
-            EnterpriseNGR’s position.
+            We ensure regular stakeholder engagement, organize and participate
+            in key sector events towards the transformation of the FPS sector.
           </div>
         </div>
         <div>
@@ -271,13 +268,14 @@
           <div class="md_heading">6.</div>
           <div class="md_heading">Talent</div>
           <div>
-            The success of the Nigerian FPS sector depends on the quality of
-            talent within, hence putting mechanisms in place to grow this talent
-            is crucial. That is why we created the ‘Youth Of Enterprise’
-            Internship Programme (YOE) – an initiative that aims to build a
-            strong pipeline of entry-level talent through the recruitment and
-            upskilling of 5,000 interns annually and subsequently grow that
-            number to 100,000 in the next 5 years.
+            One of the critical success factors for the development of the
+            Nigerian FPS sector is the quality of the talent within, hence
+            attracting and nurturing top talent is crucial. Our first initiative
+            in line with this is the ‘Youth Of Enterprise’ Internship Programme
+            (YOE) – an initiative that aims to build a strong pipeline of
+            entry-level talent through the recruitment and upskilling of 5,000
+            interns annually and subsequently growing that number to 100,000 in
+            the next 10 years.
           </div>
         </div>
       </div>
